volexc/tests/ui/parse_missing_paren_union.vol
// Missing opening paren in union variant
union Foo {
    Bar u32) = 1
}
